--- a/config/boards/shields/lily58/lily58.zmk.yml
+++ b/config/boards/shields/lily58/lily58.zmk.yml
@@ -1,8 +1,8 @@
 file_format: "1"
-id: sml58
-name: sml58
+id: lily58
+name: lily58
 type: shield
-url: https://github.com/kata0510/sml58
+url: https://github.com/kata0510/lily58
 requires: [pro_micro]
 exposes: [i2c_oled]
 features:
@@ -10,5 +10,5 @@ features:
   - display
   - studio
 siblings:
-  - sml58_left
-  - sml58_right
+  - lily58_left
+  - lily58_right
